.use the normal cache policy for all objects during soft reloads, not just  for images. This will let KIO use 'If-Modified-Since' conditional queries  when appropriate.

.don't trust the cache's expiry date when soft-reloading - always send
 conditional queries to revalidate instead.

.only check the completed state of a part when an object that was signaled
 to be loaded is actually part of our descendant chain. Checking  that for
 ancestors requests (or even other process-wide documents) is wasteful.
 Shouldn't this check even be limited to objects requested strictly by the
 document, and not its children? I wonder..

BUG: 137720

svn path=/trunk/KDE/kdelibs/; revision=969350